# ncs

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: build.yml
addons/: scheduler.hpp
include/ncs/: types.hpp  world.hpp
include/ncs/base/: utils.hpp
include/ncs/containers/: archetype.hpp  column.hpp  query_cache.hpp
lib/: utils.cpp  world.cpp
lib/containers/: archetypes.cpp  column.cpp
lib/world/: world.cpp
tests/: column.cpp  crud.cpp  lifecycle.cpp  query.cpp
